# KitsuneEngine

./: CMakeLists.txt  ENGINE-ARCHITECTURE.md  KitsuneEngine.sln  KitsuneEngine.vcxproj  KitsuneEngine.vcxproj.filters  MARKDOWN-SYNTAX.md  README.md  STYLE.md
engine/: CMakeLists.txt
engine/core/: AngelBase.cpp  CMakeLists.txt  ExceptionHandler.cpp  KitsuneEngine.cpp  LogHandler.cpp  ServiceLocator.cpp
engine/rendering/: CMakeLists.txt  IRenderer.cpp  RenderTargetManager.cpp  ShaderManager.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanExtensions.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  WindowManager.cpp
