#add various subdirectories for the engine
#AS WE ADD MORE DIRECTORIES IT MUST BE ADDED HERE
add_subdirectory(audio)
add_subdirectory(core)
add_subdirectory(editor)
add_subdirectory(input)
add_subdirectory(physics)
add_subdirectory(rendering)
add_subdirectory(scripting)
add_subdirectory(serialization)
